--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,10 @@ next-env.d.ts
 # Database
 *.db
 *.db-journal
+
+# Playwright
+node_modules/
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
